feat(content): update with link
update text with new link

--- a/index.html
+++ b/index.html
@@ -253,11 +253,18 @@
         <p class="mb-4">Given, we managed to avoid total annihilation, the following task at hand is even more difficult.
         We will have to pivot our way of life. Instead of economic growth we have to change to a more sustainable way of life.</p>
 
-        <p class="mb-4">In the short run this might be painful, but, in the long run, it will save us and most of our technology and scientific achievements.
-        So please, try to do your thing by saving energy, eating local food and try conserving and using stuff as long as possible.</p>
+        <p class="mb-4">
+            In the short run this might be painful, but, in the long run, it will save us and most of our technology and scientific achievements.
+            So please, try to do your thing by saving energy, eating local food and try conserving and using stuff as long as possible.
+            And holding companies accountable for their actions and waste production.
+        </p>
 
         <p class="mb-4">
             And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
+        </p>
+
+        <p class="mb-4">
+            At least in parts we seem <a href="https://sites.google.com/view/sources-can-we-fix-climate/" class="link">to be on a good way</a>, although the development could be way faster.
         </p>
     </div>
 </section>
