--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 <section class="min-h-screen flex grow-1 justify-center flex-row mt-12 w-min-full" id="mytake">
     <div class="w-min-[250px] w-max-[100%] lg:w-[640px] p-4">
-        <h2 class="text-4xl font-bold mb-5 mt-16">The author's take <span class="text-red">&#127748;</span></h2>
+        <h2 class="text-4xl font-bold mb-5 mt-16">The author's take</h2>
         <p class="mb-4">Although there are many bad things happening right now there's still hope.</p>
         <p>So no, I don't think that we're fucked yet, but nonetheless, we're pretty close!</p>
 
@@ -268,6 +268,21 @@
         </p>
     </div>
 </section>
+
+<footer class="bg-neutral-900">
+    <div class="footer p-10 pt-6">
+        <div>
+            <span class="footer-title">Contact</span>
+            <a class="link link-hover" href="impress.html">Impress</a>
+        </div>
+    </div>
+    <div class="footer-center md:pl-6 md:pr-6 pb-6 flex flex-col md:flex-row justify-center md:justify-between">
+            <div>&copy; Benedikt Grande. All rights reserved.</div>
+            <div>
+                <a class="hover:text-neutral-200 link" href="/impress.html">Impress</a>
+            </div>
+    </div>
+</footer>
 
 <script type="application/javascript">
     const aff1 = document.getElementById('aff1');
