feat(social): add social preview image
update colors and manifest settings; add svg favicon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <meta property="og:url" content="https://arewefuckedyet.com">
     <meta property="og:description" content="A dark view on current world politics and climate change">
 
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" href="/icon.png">
+    <meta name="theme-color" content="#f67dbc">
+
     <link href="tailwind.css" rel="stylesheet" media="all">
 </head>
 <body>
