fix(creator): change creator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="A dark view on current world politics and climate change">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:creator" content="https://twitter.com/arewefuckedyet">
+    <meta name="twitter:creator" content="https://twitter.com/benediktgrande">
     <meta name="twitter:url" content="https://arewefuckedyet.com">
     <meta name="twitter:title" content="Are we fucked yet? We're working on it!">
     <meta name="twitter:description" content="A dark view on current world politics and climate change">
