fix(card): it's a large image actually
let's see

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Are we fucked yet? Find the answer here!</title>
 
     <meta name="description" content="A dark view on current world politics and climate change">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@benediktgrande">
     <meta name="twitter:url" content="https://arewefuckedyet.com">
     <meta name="twitter:title" content="Are we fucked yet? We're working on it!">
     <meta name="twitter:description" content="A dark view on current world politics and climate change">
-    <meta name="twitter:image" content="https://arewefuckedyet.com/img/social.png">
+    <meta name="twitter:image" content="https://arewefuckedyet.com/img/social.png?1">
 
     <meta property="og:title" content="Are we fucked yet? We're working on it!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://arewefuckedyet.com/img/social.png">
+    <meta property="og:image" content="https://arewefuckedyet.com/img/social.png?1">
     <meta property="og:url" content="https://arewefuckedyet.com">
     <meta property="og:description" content="A dark view on current world politics and climate change">
 
