feat(content): add links
add links and video previews to different interesting sources

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h3 class="card-title">Climate Change</h3>
                 <p>
                     And then... There's climate change.
-                    This fucker – without a doubt – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
+                    This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link"title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
                 </p>
             </div>
@@ -230,7 +230,7 @@
 
         <q class="quote italic ml-4">In a war there will mainly be losers on both sides.</q>
 
-        <p class="mt-4 mb-4">In a nuclear war there will only be losers globally. Each and everyone will lose.</p>
+        <p class="mt-4 mb-4">In a nuclear war there will only be losers globally. Each and every one will lose.</p>
 
         <p class="mb-4">Their livelihood, their relatives, their friends and pretty much likely their lives.</p>
         <p class="mb-4">The reason for that is: If one nuclear power started sending out only one nuclear warhead, the other side will try to eradicate the aggressor by all means before they'll start another one.
@@ -244,6 +244,10 @@
             <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
             <a class="link" id="aff1" href="https://amzn.to/3NzZXrO">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
             I've recently read this book and can very much recommend it.
+        </p>
+        <p class="mb-4 relative block">
+            Also, there's that interesting and a bit depressing <a href="https://www.youtube.com/watch?v=M7hOpT0lPGI" class="link" title="external link to youtube video about nuclear war">TEDx Talk by Brian Toon about nuclear wars</a>:
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/M7hOpT0lPGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
 
         <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
@@ -266,8 +270,14 @@
             And holding companies accountable for their actions and waste production.
         </p>
 
+        <p class="mb-4 block relative">
+            But it doesn't stop there: Agriculture right now does many things wrong and relies heavily on Carbon Fuel based technologies (like fertilizers).
+            The good thing, <a href="https://kissthegroundmovie.com/" class="link" title="external link to movie about agriculture and soil regeneration">there might be a solution</a>:
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
+
         <p class="mb-4">
-            And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
+            And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>. There's also a <a href="https://www.reddit.com/r/climatechange/comments/mzo1oo/are_we_fucked/" class="link">discussion about this site's very topic on reddit</a>.
         </p>
 
         <p class="mb-4">
