--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="https://arewefuckedyet.com">
     <title>Are we fucked yet? Find the answer here!</title>
 
-    <meta name="description" content="A dark view on current world politics and climate change">
+    <meta name="description" content="arewefuckedyet.com contains a dark view on current world politics and climate change">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@benediktgrande">
     <meta name="twitter:url" content="https://arewefuckedyet.com">
@@ -242,12 +242,12 @@
         <p class="mb-4 relative block">
             If you're interested in this topic and want to read a fictional story about it I can really recommend
             <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
-            <a class="link" id="aff1" href="https://amzn.to/3NzZXrO">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
+            <a class="link" id="aff1" href="https://amzn.to/3NzZXrO" rel="sponsored nofollow">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
             I've recently read this book and can very much recommend it.
         </p>
         <p class="mb-4 relative block">
             Also, there's that interesting and a bit depressing <a href="https://www.youtube.com/watch?v=M7hOpT0lPGI" class="link" title="external link to youtube video about nuclear war">TEDx Talk by Brian Toon about nuclear wars</a>:
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/M7hOpT0lPGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="w-full h-[400px]" src="https://www.youtube-nocookie.com/embed/M7hOpT0lPGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
 
         <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
@@ -273,11 +273,12 @@
         <p class="mb-4 block relative">
             But it doesn't stop there: Agriculture right now does many things wrong and relies heavily on Carbon Fuel based technologies (like fertilizers).
             The good thing, <a href="https://kissthegroundmovie.com/" class="link" title="external link to movie about agriculture and soil regeneration">there might be a solution</a>:
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="w-full h-[400px]" src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
 
         <p class="mb-4">
-            And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>. There's also a <a href="https://www.reddit.com/r/climatechange/comments/mzo1oo/are_we_fucked/" class="link">discussion about this site's very topic on reddit</a>.
+            And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
+            There's also a <a href="https://www.reddit.com/r/climatechange/comments/mzo1oo/are_we_fucked/" class="link" >discussion about this site's very topic on reddit</a>.
         </p>
 
         <p class="mb-4">
