--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 
         <p class="mb-4 relative block">
             If you're interested in this topic and want to read a fictional story about it I can really recommend
-            <img id="aff1-img" class="absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
-            <a class="link" id="aff1" href="https://amzn.to/3NzZXrO" rel="sponsored nofollow">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
+            <img class="affiliate-img absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1529076935&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Ken Follet Never book cover">
+            <a class="affiliate link" href="https://amzn.to/3NzZXrO" rel="sponsored nofollow">Ken Follet's latest book <q>Never</q> <span class="text-xs">(Affiliate link!)</span></a>.
             I've recently read this book and can very much recommend it.
         </p>
         <p class="mb-4 relative block">
@@ -296,9 +296,12 @@
             <iframe class="w-full h-[400px]" src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
 
-        <p class="mb-4">
+        <p class="mb-4 block relative">
             And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
             There's also a <a href="https://www.reddit.com/r/climatechange/comments/mzo1oo/are_we_fucked/" class="link" >discussion about this site's very topic on reddit</a>.
+            <br>
+            Although I don't agree with everything written in <img class="affiliate-img absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0241448301&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Bill Gates book How to Avoid a Climate Disaster cover">
+            <a class="affiliate link" href="https://amzn.to/3usTVS2" rel="sponsored nofollow">Bill Gate's <q>How to Avoid a Climate Disaster</q> <span class="text-xs">(Affiliate link!)</span></a>, it's definitely worth a read if you're interested in this topic.
         </p>
 
         <p class="mb-4">
@@ -323,20 +326,30 @@
 </footer>
 
 <script type="application/javascript">
-    const aff1 = document.getElementById('aff1');
-    const aff1Img = document.getElementById('aff1-img');
-    if (aff1 && aff1Img) {
-        let previewHover = function (e) {
-            aff1Img.style.display = 'block';
-            aff1Img.style.top = "-2em";
-        };
-        aff1.addEventListener('mouseenter', previewHover);
-        aff1.addEventListener('click', previewHover);
-        aff1.addEventListener('mouseout', function (e) {
-            setTimeout(function () {
-                aff1Img.style.display = 'none';
-            }, 1000);
-        })
+    const affiliateLinks = document.getElementsByClassName('affiliate');
+
+    if (affiliateLinks && affiliateLinks.length > 0) {
+        for (let i in affiliateLinks) {
+            if (!affiliateLinks.hasOwnProperty(i)) {
+                continue;
+            }
+
+            let linkElement = affiliateLinks[i];
+            let imgElement = linkElement.previousElementSibling;
+
+            let previewHover = function (e) {
+                imgElement.style.display = 'block';
+                imgElement.style.top = "-2em";
+            };
+
+            linkElement.addEventListener('mouseenter', previewHover);
+            linkElement.addEventListener('click', previewHover);
+            linkElement.addEventListener('mouseout', function (e) {
+                setTimeout(function () {
+                    imgElement.style.display = 'none';
+                }, 1000);
+            })
+        }
     }
 
     const stateObjectList = [
