fix(title): improve wording
improve title and description wording

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://arewefuckedyet.com">
-    <title>Are we fucked yet? Find the answer here!</title>
+    <title>Are we fucked yet? There are a lot of reasons we might!</title>
 
-    <meta name="description" content="arewefuckedyet.com contains a dark view on current world politics and climate change">
+    <meta name="description" content="Did you ever want to know if we were fucked already? Find the answer here!">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@benediktgrande">
     <meta name="twitter:url" content="https://arewefuckedyet.com">
