feat(content): add new links
links to latest articles and projects

--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
         <h3 class="text-2xl font-bold mb-3 mt-16">And Climate change?</h3>
         <div class="block md:inline-block md:w-2/3 md:align-top">
             <p class="mb-4">In the long run this is even scarier.</p>
+            <p class="mb-4">Based on the <a href="https://gar.undrr.org/" class="link">UN Global Assessment Report</a>
+                you can find different pieces like what you're currently <a href="https://futurism.com/the-byte/un-spiral-self-destruction">warning of doomsday</a> related to climate change.
+            </p>
             <p class="mb-4">Given, we managed to avoid total annihilation, the following task at hand is even more difficult.
                 We will have to pivot our way of life. Instead of economic growth we have to change to a more sustainable way of life.</p>
         </div>
@@ -297,10 +300,14 @@
             <iframe class="w-full h-[400px]" src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p>
 
-        <p class="mb-4 block relative">
+        <p class="mb-4 block">
             And if you really want to make a difference, check out my friend Tiago's app <a href="https://changeit.app/" class="link">Changeit</a>.
             There's also a <a href="https://www.reddit.com/r/climatechange/comments/mzo1oo/are_we_fucked/" class="link" >discussion about this site's very topic on reddit</a>.
             <br>
+            Also, <a href="https://www.globalgoals.org/goals/" class="link">the global goals list</a> gives you an overview about what we could do to make the world a better place, including possible actions.
+        </p>
+
+        <p class="mb-4 block relative">
             Although I don't agree with everything written in <img class="affiliate-img absolute right-0" style="display: none" border="0" src="https://ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0241448301&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=awfaffiliate-21&language=de_DE" alt="Bill Gates book How to Avoid a Climate Disaster cover">
             <a class="affiliate link" href="https://amzn.to/3usTVS2" rel="sponsored nofollow">Bill Gate's <q>How to Avoid a Climate Disaster</q> <span class="text-xs">(Affiliate link!)</span></a>, it's definitely worth a read if you're interested in this topic.
         </p>
