fix(webmanifst): copy correct file on build

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
     ;
 </script>
 <script src="https://yesno.pagereply.com/arewefuckedyet.com/votejs" defer async></script>
-<!--<script src="http://0.0.0.0:3000/logjs.php" defer async></script>-->
+<script src="https://usagelog.pagereply.com/logjs?source=arewefuckedyet.com" defer async></script>
 
 </body>
 </html>
