feat(beer): bottle shortage
no no no we need this!

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <figure><img src="/img/bundestag.jpg" class="max-h-[200px] w-full object-cover" alt="German Bundestag with German flag" /></figure>
             <div class="card-body">
                 <h3 class="card-title">Germany</h3>
-                <p>Trust me, you don't want headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a> seen. Because, well, last time it went so well...</p>
+                <p>Trust me, you don't want to see headlines like <a class="link" href="https://text.npr.org/1087137501">Germany is supposedly building Europe's largest military</a>. Because, well, last time it went so well...</p>
                 <p>Ok, that one is a joke! Luckily it's not like that anymore.</p>
             </div>
         </div>
@@ -193,6 +193,17 @@
                     And then... There's climate change.
                     This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link"title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
+                </p>
+            </div>
+        </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/beer.jpg" class="max-h-[200px] w-full object-cover" alt="Beer bottle" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Peak Beer</h3>
+                <p>
+                    Germany is running out of beer or at <a href="https://www.bbc.com/news/world-europe-61490433" class="link"title="external link to article about beer bottle shortage in Germany">least bottles for said beverage</a>.<br>
+                    This is bad! If there wasn't enough beer in Germany god knows what could happen!
                 </p>
             </div>
         </div>
@@ -325,12 +336,16 @@
             <span class="footer-title">Contact</span>
             <a class="link link-hover" href="impress.html">Impress</a>
         </div>
+        <div class="w-full">
+            <span class="footer-title">Attribution</span>
+            Beer Bottle Photo by <a href="https://unsplash.com/@storyninetyfour?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Story Ninety-Four</a> on <a href="https://unsplash.com/s/photos/beer-bottle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" class="link">Unsplash</a>
+        </div>
     </div>
     <div class="footer-center md:pl-6 md:pr-6 pb-6 flex flex-col md:flex-row justify-center md:justify-between">
-            <div>&copy; Benedikt Grande. All rights reserved.</div>
-            <div>
-                <a class="hover:text-neutral-200 link" href="/impress.html">Impress</a>
-            </div>
+        <div>&copy; Benedikt Grande. All rights reserved.</div>
+        <div>
+            <a class="hover:text-neutral-200 link" href="/impress.html">Impress</a>
+        </div>
     </div>
 </footer>
 
