fix(animation): animate CTA buttons
bounce it baby

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <p id="percentage" class="text-2xl mt-8" title="State of being fucked">&nbsp;</p>
                     <p id="userpoll" class="text-2xl mt-8" title="How the page's users think we're fucked">&nbsp;</p>
                     <p class="mt-10">
-                        <a class="btn btn-primary" href="#more" title="Read more">Read more!</a>
+                        <a class="btn btn-primary animate-bounce" href="#more" title="Read more">Read more!</a>
                     </p>
                 </div>
             </div>
@@ -210,7 +210,7 @@
     </div>
 
     <p class="mt-16 text-center">
-        <a class="btn btn-primary" href="#mytake" title="Read the author's take">The author's take!</a>
+        <a class="btn btn-primary animate-bounce" href="#mytake" title="Read the author's take">The author's take!</a>
     </p>
 </main>
 
