feat(plankton): killing plankton
add an info box about missing plankton

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h3 class="card-title">Climate Change</h3>
                 <p>
                     And then... There's climate change.
-                    This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link"title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
+                    This fucker – <a href="https://www.thedailybeast.com/un-climate-experts-to-the-world-were-already-fucked" class="link" title="external link to article about climate expert's view">without a doubt</a> – will make us, as a species with interplanetary ambitions and being relatively intelligent, hit the coffin.
                     If we're not going to pivot anytime soon, that is!
                 </p>
             </div>
@@ -202,8 +202,20 @@
             <div class="card-body">
                 <h3 class="card-title">Peak Beer</h3>
                 <p>
-                    Germany is running out of beer or at <a href="https://www.bbc.com/news/world-europe-61490433" class="link"title="external link to article about beer bottle shortage in Germany">least bottles for said beverage</a>.<br>
+                    Germany is running out of beer or at <a href="https://www.bbc.com/news/world-europe-61490433" class="link" title="external link to article about beer bottle shortage in Germany">least bottles for said beverage</a>.<br>
                     This is bad! If there wasn't enough beer in Germany god knows what could happen!
+                </p>
+            </div>
+        </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/plankton.jpg" class="max-h-[200px] w-full object-cover" alt="Maritime Life - plankton" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Killing Marine Life</h3>
+                <p>
+                    We're (well, our pollution) killing maritime wildlife, <a href="https://www.sundaypost.com/fp/humanity-will-not-survive-extinction-of-most-marine-plants-and-animals/" class="link" title="external link to article about beer bottle shortage in Germany">especially plankton</a>.<br>
+                    Since plankton is one of the very roots in maritime food chain this is extremely bad in so many ways.
+                    With plankton missing, most maritime species are going to die. And so are we!
                 </p>
             </div>
         </div>
