Revert "fix(plankton): disclaimer"
This reverts commit 7316f97563a42cba691d263e3a8bf436f065f89d.

--- a/index.html
+++ b/index.html
@@ -213,10 +213,9 @@
             <div class="card-body">
                 <h3 class="card-title">Killing Marine Life</h3>
                 <p>
-                    We're (well, our pollution) killing marine wildlife, <a href="https://www.sundaypost.com/fp/humanity-will-not-survive-extinction-of-most-marine-plants-and-animals/" class="link" title="external link to article about beer bottle shortage in Germany">especially plankton *</a>.<br>
+                    We're (well, our pollution) killing marine wildlife, <a href="https://www.sundaypost.com/fp/humanity-will-not-survive-extinction-of-most-marine-plants-and-animals/" class="link" title="external link to article about beer bottle shortage in Germany">especially plankton</a>.<br>
                     Since plankton is one of the very roots in marine food chain this is extremely bad in so many ways.
                     With plankton missing, most maritime species are going to die. And so are we!
-                    <span class="text-xs mt-4 block">* It's only one data point and most likely not as bad as they write! Still we should take more care of our ecosystems!</span>
                 </p>
             </div>
         </div>
