feat(drought): add section
we have a drought

--- a/index.html
+++ b/index.html
@@ -220,6 +220,18 @@
                 </p>
             </div>
         </div>
+
+        <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/img/drought.jpg" class="max-h-[200px] w-full object-cover" alt="Soil dried by drought" /></figure>
+            <div class="card-body">
+                <h3 class="card-title">Drought</h3>
+                <p>
+                    2022 brought large parts of the northern hemisphere another pretty plague...
+                    Europe, the US and China suffered (and are still suffering at the time of writing this) from the worst drought for 500 years.
+                    We didn't have real rain for about 8 weeks where I live which is very unusual.
+                </p>
+            </div>
+        </div>
     </div>
 
     <p class="mt-16 text-center">
