--- a/index.html
+++ b/index.html
@@ -302,7 +302,12 @@
             Also, there's that interesting and a bit depressing <a href="https://www.youtube.com/watch?v=M7hOpT0lPGI" class="link" title="external link to youtube video about nuclear war">TEDx Talk by Brian Toon about nuclear wars</a>:
             <a class="relative w-full h-[400px] overflow-hidden js-youtube" data-src="https://www.youtube-nocookie.com/embed/M7hOpT0lPGI" href="#">
                 <span>
-                    <span class="absolute flex p-8"><span class="justify-center items-center bg-base-100 p-2 text-center">By clicking the preview you hereby consent to allow youtube's cookies and tracking functionality (consent will be saved for 1 week). <br><b href="btn btn-default">Consent</b></span></span>
+                    <span class="absolute flex p-8">
+                        <span class="justify-center items-center bg-base-100 p-2 text-center">
+                            By clicking the preview you hereby consent to allow youtube's cookies and tracking functionality (consent will be saved for 1 week). <br><br>
+                            <b class="btn btn-default">Consent</b>
+                        </span>
+                    </span>
                     <img src="https://i.ytimg.com/vi_webp/M7hOpT0lPGI/sddefault.webp" alt="Just a youtube video preview" />
                 </span>
             </a>
