fix(button): it's class
using class not href for classes... obviously :D

--- a/index.html
+++ b/index.html
@@ -346,7 +346,12 @@
             The good thing, <a href="https://kissthegroundmovie.com/" class="link" title="external link to movie about agriculture and soil regeneration">there might be a solution</a>:
             <a class="relative w-full h-[400px] overflow-hidden js-youtube" data-src="https://www.youtube-nocookie.com/embed/3iknWWKZOUs" href="#">
                 <span>
-                    <span class="absolute flex p-8"><span class="justify-center items-center bg-base-100 p-2 text-center">By clicking the preview you hereby consent to allow youtube's cookies and tracking functionality (consent will be saved for 1 week). <br><b href="btn btn-default">Consent</b></span></span>
+                    <span class="absolute flex p-8">
+                        <span class="justify-center items-center bg-base-100 p-2 text-center">
+                            By clicking the preview you hereby consent to allow youtube's cookies and tracking functionality (consent will be saved for 1 week). <br>
+                            <b class="btn btn-default">Consent</b>
+                        </span>
+                    </span>
                     <img src="https://i.ytimg.com/vi_webp/3iknWWKZOUs/sddefault.webp" alt="Just a youtube video preview" />
                 </span>
             </a>
