fix(wording): life instead of live
english can be hard

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </p>
 
         <h4 class="text-xl font-bold mb-3 mt-12">Would anyone survive?</h4>
-        <p class="mb-4">Yep, but for many of them live will be real torture.
+        <p class="mb-4">Yep, but for many of them life will be real torture.
         Most will be sick (not only by radiation), starve or be involved into major and minor wars and conflicts.
         Technology, electrical energy and heating will be rare and expensive.
         Many of us would have to be farmers, gatherers and hunters, again.</p>
